# car-data-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app_run.sh  config.py  db_connect.py  main.py
app/controllers/: __init__.py  autoria.py  classes.py  crud.py  db_actions.py
app/models/: __init__.py  car.py
app/schemes/: __init__.py  car_schemes.py
app/views/: __init__.py  cars_views.py  db_views.py
