[project]
name = "car-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "beanie>=1.29.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.1",
]
